--- a/fetchtask.html
+++ b/fetchtask.html
@@ -8,13 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h2 >PRODUCTS API</h2>
-    <div class="container">
-<div class="row">
-    <div class="col-6">
-        <div id="cards"></div>
+    <h2 class="text-center my-3">PRODUCTS API</h2>
+   <div class="container">
+<div id="cards" class="row p-3 my-3">
+   
     </div>
-</div>
     </div>
 
     <script>
@@ -25,14 +23,16 @@
         function displaydata(data){
             for(let key of data ){
 htmldata = `
+<div  class="col-3">
     <div class="cards">
   <img src="${key.images}" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">${key.title}</h5>
     <p class="card-text">${key.description}</p>
 <p>Rs : ${key.price}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary mb-3">Go somewhere</a>
   </div>
+</div>
 </div>
 `
 cards.innerHTML += htmldata
